samples/_failures_safe/1761333074_2956d4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_35ea1512.c: In function ‘main’:
./samples/SAFE/__tmp_35ea1512.c:148:9: error: expected expression at end of input
  148 |         if (
      |         ^~
./samples/SAFE/__tmp_35ea1512.c:148:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_35ea1512.c:148:9: error: expected declaration or statement at end of input
